# demo-passkey

./: .rspack.js  Cargo.toml  Makefile.toml  package.json  pnpm-lock.yaml
public/: index.css  index.html
src/: main.tsx  webauthn.ts
wasm/: lib.rs  package.json  wasm_passkey.d.ts  wasm_passkey.js  wasm_passkey_bg.js  wasm_passkey_bg.wasm  wasm_passkey_bg.wasm.d.ts
