[package]
name = "wasm-passkey"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.6"
serde = {version = "1", features = ["derive"]}
log = "0.4"
sha2 = "0.10.8"
wasm-log = "0.3"
serde_json = "1.0.116"
base64 = "0.22.0"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"] }